--- a/src/main/resources/Fxml/DashAddCategories.fxml
+++ b/src/main/resources/Fxml/DashAddCategories.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import java.net.URL?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" style="-fx-background-color: #02030A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="services.ServiceCategorie">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" style="-fx-background-color: #02030A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="services.CategoryController">
     <children>
         <VBox alignment="TOP_CENTER" prefHeight="576.0" prefWidth="256.0" style="-fx-background-color: #05071F;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -134,34 +134,29 @@
                 <Pane fx:id="pnlMenus" prefHeight="200.0" prefWidth="200.0" />
                 <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0">
                     <children>
-                        <TextField layoutX="590.0" layoutY="47.0" prefHeight="27.0" prefWidth="183.0" promptText="search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
-                        <Label layoutX="57.0" layoutY="25.0" styleClass="title" stylesheets="@../css/DashStyle.css" text="Liste des catégories" >
+
+                        <Label layoutX="57.0" layoutY="25.0" styleClass="title" stylesheets="@../css/DashStyle.css" text="Ajouter und catégorie" >
                             <font>
                                 <Font size="24.0" />
                             </font>
                         </Label>
 
 
-                            <HBox alignment="CENTER" layoutX="45.0" layoutY="72.0" prefHeight="372.0" prefWidth="641.0" spacing="50.0" style="-fx-padding: 90px 0 0 150px;">
-                                <children>
-                                    <TableView fx:id="table" prefHeight="400.0" prefWidth="732.0">
-                                        <columns>
-
-                                            <TableColumn fx:id="nomm" prefWidth="192.79998779296875" text="Nom catégorie" />
-                                        </columns>
-                                        <stylesheets>
-                                            <URL value="@../css/DashStyle.css" />
-                                        </stylesheets>
-                                    </TableView>
-                                </children>
+                        <HBox alignment="CENTER" layoutX="45.0" layoutY="72.0" prefHeight="372.0" prefWidth="641.0" spacing="50.0" style="-fx-padding: 90px 0 0 150px;">
+                            <children>
+                                <VBox layoutX="73.0" layoutY="78.0" prefHeight="200.0" prefWidth="454.0">
+                                    <children>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nom" />
+                                        <TextField fx:id="categorie_prod" />
+                                        <Label fx:id="errorLabel" textFill="red" />
+                                        <Button fx:id="ajouter" mnemonicParsing="false" text="Ajouter" onAction="#ajouter"/>
+                                    </children>
+                                </VBox>
+                            </children>
 
                         </HBox>
 
-                        <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="749.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../resources/icons8_Search_52px.png" />
-                            </image>
-                        </ImageView>
+
                     </children>
                 </Pane>
             </children>
