--- a/src/main/resources/css/DashStyle.css
+++ b/src/main/resources/css/DashStyle.css
@@ -75,3 +75,37 @@
 .scroll-pane > .corner {
     -fx-background-color: black;
 }
+
+/* Style pour le titre */
+.dialog-pane .dialog-pane .header-panel .header .label {
+    -fx-text-fill: white; /* Couleur du texte */
+    -fx-font-size: 18px; /* Taille de la police */
+}
+
+/* Style pour les boutons */
+.dialog-pane .button-bar .container .button {
+    -fx-background-color: #05071F; /* Couleur de fond */
+    -fx-text-fill: #e7e5e5; /* Couleur du texte */
+}
+
+.dialog-pane .button-bar .container .button:hover {
+    -fx-background-color: #10165F; /* Couleur de fond au survol */
+}
+
+.dialog-pane .button-bar .container .button:pressed {
+    -fx-background-color: #1620A1; /* Couleur de fond lorsqu'appuyé */
+}
+/* Style pour le titre */
+.dialog-pane .dialog-pane .header-panel .header .label {
+    -fx-text-fill: #e7e5e5; /* Couleur du texte */
+    -fx-font-size: 20px; /* Taille de la police */
+    -fx-font-weight: bold; /* Texte en gras */
+    -fx-alignment: center; /* Alignement au centre */
+}
+
+/* Style pour le contenu */
+.dialog-pane .content {
+    -fx-font-weight: bold; /* Texte en gras */
+    -fx-font-size: 16px; /* Taille de la police */
+    -fx-text-fill: #e7e5e5; /* Couleur du texte */
+}
