--- a/src/main/resources/Fxml/ListProducts.fxml
+++ b/src/main/resources/Fxml/ListProducts.fxml
@@ -106,8 +106,8 @@
                             <Insets left="30.0" right="30.0" />
                         </VBox.margin>
                         <children>
-                            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
-                            <TextField prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
+                            <Button  fx:id="searchButton" onAction="#handleSearch" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
+                            <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
                                 <HBox.margin>
                                     <Insets right="20.0" />
                                 </HBox.margin>
