--- a/src/main/resources/css/styless.css
+++ b/src/main/resources/css/styless.css
@@ -21,7 +21,7 @@
 }
 
 .chosen-fruit-card{
-    -fx-background-color: #F16C31;
+    -fx-background-color: #c4304f;
     -fx-background-radius: 30;
 }
 
