--- a/src/main/resources/Fxml/ListProducts.fxml
+++ b/src/main/resources/Fxml/ListProducts.fxml
@@ -1,125 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.TextField?>
-<?import java.lang.String?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ComboBox?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="649.0" prefWidth="1087.0" style="-fx-background-color: #2F2B43;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="729.0" prefWidth="1214.0" style="-fx-background-color: #2F2B43;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductController">
     <children>
-        <AnchorPane prefHeight="519.0" prefWidth="262.0" style="-fx-background-color: #393351;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <VBox layoutY="160.0" prefHeight="356.0" prefWidth="262.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="160.0">
-                    <children>
-                        <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="262.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="Ben Affleck" textFill="WHITE">
-                            <graphic>
-                                <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../resources/ben-affleck.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                            <padding>
-                                <Insets left="40.0" />
-                            </padding></Button>
-                        <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="262.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="Jimmy Mason" textFill="WHITE">
-                            <graphic>
-                                <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../resources/ic_usr.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <padding>
-                                <Insets left="40.0" />
-                            </padding>
-                        </Button>
-                        <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="262.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="Alex Mainman" textFill="WHITE">
-                            <graphic>
-                                <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../resources/profile-adam-levine.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <padding>
-                                <Insets left="40.0" />
-                            </padding>
-                        </Button>
-                        <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="262.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="Rob Damien" textFill="WHITE">
-                            <graphic>
-                                <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../resources/profile-james-marsden.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <padding>
-                                <Insets left="40.0" />
-                            </padding>
-                        </Button>
-                    </children>
-                </VBox>
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="90.0" prefWidth="1388.0" style="-fx-background-color: #393351;">
+         <children>
+            <HBox alignment="CENTER_LEFT" prefHeight="86.0" prefWidth="1394.0" style="-fx-background-color: #1F1D2B;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="50.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/icons8_Home_32px.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="10.0" right="5.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Label graphicTextGap="7.0" text="TRASKEL" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="7.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label graphicTextGap="7.0" text="Home" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="200.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label graphicTextGap="7.0" text="Shop" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label graphicTextGap="7.0" text="Services" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label graphicTextGap="7.0" text="Contact Us" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/icons8_Person_32px.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="150.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <ImageView fitHeight="31.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/icons8_Person_32px.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </ImageView>
+               </children>
+            </HBox>
+             
+            
+                    <Pane prefHeight="5.0" prefWidth="1388.0" />
+         </children>
+      </VBox>
 
-                <Pane layoutY="86.0" prefHeight="61.0" prefWidth="262.0" style="-fx-background-color: #FA2C56; -fx-background-radius: 5;">
-                    <children>
-                        <Label layoutX="25.0" layoutY="17.0" text="Home Space" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="18.0" />
-                            </font>
-                        </Label>
-                    </children>
+                <Pane layoutX="154.0" layoutY="164.0" prefHeight="519.0" prefWidth="491.0" stylesheets="@../css/styless.css">
+              <children>
+                  <AnchorPane prefHeight="519.0" prefWidth="562.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                      <GridPane fx:id="gridPane" hgap="70" layoutX="79.0" layoutY="108.0" prefHeight="200.0" prefWidth="821.0" vgap="10">
+                      </GridPane>
+
+                  </AnchorPane>
+              </children>
+              <HBox alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="400.0" stylesheets="@../css/styless.css" VBox.vgrow="NEVER">
+                  <VBox.margin>
+                      <Insets left="30.0" right="30.0" />
+                  </VBox.margin>
+                  <children>
+                      <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearch" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
+                      <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
+                          <HBox.margin>
+                              <Insets right="20.0" />
+                          </HBox.margin>
+                          <font>
+                              <Font name="Cambria" size="18.0" />
+                          </font>
+                      </TextField>
+                  </children>
+                  <styleClass>
+                      <String fx:value="search-box" />
+                      <String fx:value="shadow" />
+                  </styleClass>
+              </HBox>
+
                 </Pane>
-            </children></AnchorPane>
-
-        <Pane layoutX="262.0" prefHeight="649.0" prefWidth="631.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <Pane layoutX="-25.0" layoutY="-178.0" prefHeight="303.0" prefWidth="407.0" rotate="41.6" style="-fx-background-color: #FA2C56; -fx-background-radius: 70;" />
-
-                <Pane layoutX="76.0" layoutY="106.0">
-                    <children>
-                        <AnchorPane prefHeight="519.0" prefWidth="562.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-                            <GridPane fx:id="gridPane" layoutX="79.0" layoutY="108.0" prefHeight="200.0" prefWidth="621.0">
-                            </GridPane>
-                        </AnchorPane>
-                    </children>
-                    <HBox alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="400.0" stylesheets="@../css/styless.css" VBox.vgrow="NEVER">
-                        <VBox.margin>
-                            <Insets left="30.0" right="30.0" />
-                        </VBox.margin>
-                        <children>
-                            <Button  fx:id="searchButton" onAction="#handleSearch" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="search-button" stylesheets="@../css/styless.css" text="Search" textFill="WHITE" />
-                            <TextField fx:id="searchTextField" prefHeight="40.0" prefWidth="235.0" promptText="Type here to search" styleClass="transparent" stylesheets="@../css/styless.css">
-                                <HBox.margin>
-                                    <Insets right="20.0" />
-                                </HBox.margin>
-                                <font>
-                                    <Font name="Cambria" size="18.0" />
-                                </font>
-                            </TextField>
-                        </children>
-                        <styleClass>
-                            <String fx:value="search-box" />
-                            <String fx:value="shadow" />
-                        </styleClass>
-                    </HBox>
-
-                </Pane>
-                <ComboBox fx:id="categoryComboBox"  prefHeight="40.0" prefWidth="180.0" promptText="Tous les catégories">
+      <Pane layoutX="-346.0" layoutY="68.0" prefHeight="303.0" prefWidth="467.0" rotate="41.6" style="-fx-background-color: #FA2C56; -fx-background-radius: 70;" />
+          <ComboBox fx:id="categoryComboBox" layoutX="818.0" layoutY="164.0" prefHeight="60.0" prefWidth="200.0" promptText="Tous les catégories" style="-fx-background-color: white;">
 
                 </ComboBox>
-            </children>
-        </Pane>
     </children>
 </AnchorPane>
